updated swagger with counter
