# controllers/Entry.js
@@ -12,3 +12,23 @@ module.exports.addEntry = function addEntry (req, res, next, body) {
       utils.writeJson(res, response);
     });
 };
+
+module.exports.entryGetEntriesGET = function entryGetEntriesGET (req, res, next) {
+  Entry.entryGetEntriesGET()
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.resetEntriesPOST = function resetEntriesPOST (req, res, next) {
+  Entry.resetEntriesPOST()
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
